# SelfChat

./: .env.example  .gitignore  Procfile  README.md  manage.py  pyproject.toml
SelfGPT/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: forms.py  views.py
accounts/static/css/: login.css
accounts/templates/: login.html  register.html
chroma_db/: chroma.sqlite3
home/: forms.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py
home/static/css/: home.css
home/templates/: chat.html  home.html
rag/: embeddings.py  ingest.py  llm.py  pileline.py  prompts.py  retriever.py  splitter.py  vectorstore.py
staticfiles/: staticfiles.json
staticfiles/css/: chat.css  login.css  register.bd55a406f348.css
