[project]
name = "selfgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "django>=6.0.6",
    "dotenv>=0.9.9",
    "gunicorn>=26.0.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-mistralai>=1.1.5",
    "langchain-text-splitters>=1.1.2",
    "psycopg>=3.3.4",
    "pypdf>=6.14.2",
    "whitenoise>=6.12.0",
]
